--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "mocha": "^5.0.3",
+    "mocha": "5.0.1",
     "should": "^13.2.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
@@ -27,5 +27,6 @@
   "repository": {
     "url": "https://github.com/Maxwell-Alexius/Manufacturer",
     "type": "git"
-  }
+  },
+  "dependencies": {}
 }
