--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: false
 dist: trusty
 language: node_js
 node_js:
+  - "stable"
   - "8"
   - "7"
   - "6"
@@ -9,5 +10,8 @@ cache:
   yarn: true
   directories:
     - "node_modules"
+
 script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && codecov
+  - codecov
   - yarn test
