--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "istanbul": "^0.4.5",
     "mocha": "5.0.1",
     "should": "^13.2.1",
     "webpack": "^4.0.1",
@@ -27,6 +28,5 @@
   "repository": {
     "url": "https://github.com/Maxwell-Alexius/Manufacturer",
     "type": "git"
-  },
-  "dependencies": {}
+  }
 }
